# crypt_r

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml
Lib/test/: test_crypt.py
Modules/: _cryptmodule.c
Modules/clinic/: _cryptmodule.c.h
src/: _crypt_r.c  crypt.py  crypt_r.py
tests/: test_crypt_r.py
